7.24.9 (11-07-2025)
- Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]

7.24.8 (08-07-2025)
- Refactor: Refactors RegistrationDGESStateBean and IngressionServices to handle new entities EducationLevelType, ProfessionCategoryType, ProfessionalStatusType [#qubIT-Fenix-7009]

7.24.7 (04-07-2025)
- Refactor: Moves StudentCandidacy fields to Registration [#qubIT-Fenix-6559]

7.24.6 (12-06-2025)
- Refactor: Remove StudentCandidacy#ExecutionDegree references [#qubIT-Fenix-6559]
- Refactor: Remove dependency of StudentCandidacy from StudentActive algorithm [#qubIT-Fenix-6559]

7.24.5 (24-02-2025)
- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]

7.24.4 (19-02-2025)
- Refactor: Removes unused viewRegistrationDetailsTreasuryDebtAccountLink_ulisboa_specification [#qubIT-Fenix-6559]
- Refactor: Removes reference to StudentCandidacy numberOfCandidaciesToHigherSchool [#qubIT-Fenix-6559]
- Improvement: Add last validation date to personal specifications [#UL-REIT-4199]

7.24.3 (07-02-2025)
- Refactor: Remove ExceptionHandlers since they are made redundant by recent fenixedu-base changes [#qubIT-Omnis-8439]
- Refactor: Removes unused ManageRegistrationEntryGradeController [#qubIT-Fenix-6559]

7.24.2 (04-02-2025)
- Refactor: Remove reference to non-existing method [#UL-ISA-5417]

7.24.1 (30-01-2025)
- Refactor: Remove usages of ITreasuryBriggeAPI [#qubIT-Fenix-6565]

7.24.0 (29-01-2025)
- Improvement: Replaces all code that sends academic-core Messages and replaces with signals that will send CommunicationMessage [#qubIT-Omnis-8403] 

7.23.0 (27-01-2025)
- Refactor: Remove references to deprecated GradeScaleEnum related domain [#qubIT-Fenix-1784]

7.22.0 (15-01-2025)
- Refactor: Changes sendConcludeEmail to use SystemSender [#qubIT-Omnis-7780]

7.21.5 (13-01-2025)
- Refactor: change references of EntryPhase to AdmissionPhase [#qubIT-Fenix-5905]

7.21.4 (16-12-2024)